--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 NODE_ENV=production
+
+# SMTP Configuration for Contact Form
+# Replace these values with your actual SMTP server details
+SMTP_HOST=smtp.your-mail-server.com
+SMTP_PORT=587
+SMTP_USER=your-smtp-username
+SMTP_PASS=your-smtp-password
+SMTP_FROM=noreply@afriikanet.co.ke
+SMTP_TO=info@afriikanet.co.ke
